{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 95,
  "lineage": "5cdd4cfb-2359-e7c8-4f41-07c511e4dc62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hw-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03cbad7144aeda3eb",
            "arn": "arn:aws:ec2:eu-central-1:690303306528:instance/i-0370eb9280f3e847a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0370eb9280f3e847a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "WebTest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c622bd8be88d41fc"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c622bd8be88d41fc",
            "private_dns": "ip-10-10-10-101.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.101",
            "public_dns": "ec2-18-194-220-47.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.220.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00404e9099e6aae51",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0164fdd10e1fc74e8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9c565832185fbf6"
            ]
          },
          "dependencies": [
            "aws_network_interface.hw-db-net",
            "aws_security_group.hw-pub-sg",
            "aws_subnet.hw-snet",
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hw-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03cbad7144aeda3eb",
            "arn": "arn:aws:ec2:eu-central-1:690303306528:instance/i-0e6ed5c64485d1248",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6ed5c64485d1248",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "WebTest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a76dc080f2408bc5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a76dc080f2408bc5",
            "private_dns": "ip-10-10-10-100.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.100",
            "public_dns": "ec2-35-157-166-116.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.166.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4aa530320cfaf90",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0164fdd10e1fc74e8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9c565832185fbf6"
            ]
          },
          "dependencies": [
            "aws_network_interface.hw-web-net",
            "aws_security_group.hw-pub-sg",
            "aws_subnet.hw-snet",
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hw-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:690303306528:internet-gateway/igw-015d510e2d76bc1a8",
            "id": "igw-015d510e2d76bc1a8",
            "owner_id": "690303306528",
            "tags": {
              "Name": "HW-IGW"
            },
            "tags_all": {
              "Name": "HW-IGW"
            },
            "vpc_id": "vpc-053afe5968a156be4"
          },
          "dependencies": [
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "hw-db-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:690303306528:network-interface/eni-0c622bd8be88d41fc",
            "id": "eni-0c622bd8be88d41fc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:12:47:96:e3:dd",
            "owner_id": "690303306528",
            "private_dns_name": "ip-10-10-10-101.eu-central-1.compute.internal",
            "private_ip": "10.10.10.101",
            "private_ip_list": [
              "10.10.10.101"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.10.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c9c565832185fbf6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0164fdd10e1fc74e8",
            "tags": {
              "Name": "HW-DB-PRIVATE-IP"
            },
            "tags_all": {
              "Name": "HW-DB-PRIVATE-IP"
            }
          },
          "dependencies": [
            "aws_security_group.hw-pub-sg",
            "aws_subnet.hw-snet",
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "hw-web-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:690303306528:network-interface/eni-0a76dc080f2408bc5",
            "id": "eni-0a76dc080f2408bc5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:be:6e:ff:fe:d5",
            "owner_id": "690303306528",
            "private_dns_name": "ip-10-10-10-100.eu-central-1.compute.internal",
            "private_ip": "10.10.10.100",
            "private_ip_list": [
              "10.10.10.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c9c565832185fbf6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0164fdd10e1fc74e8",
            "tags": {
              "Name": "HW-WEB-PRIVATE-IP"
            },
            "tags_all": {
              "Name": "HW-WEB-PRIVATE-IP"
            }
          },
          "dependencies": [
            "aws_security_group.hw-pub-sg",
            "aws_subnet.hw-snet",
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hw-prt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:690303306528:route-table/rtb-0ec79f3f1047f4e61",
            "id": "rtb-0ec79f3f1047f4e61",
            "owner_id": "690303306528",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015d510e2d76bc1a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HW-PUBLIC-PRT"
            },
            "tags_all": {
              "Name": "HW-PUBLIC-PRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-053afe5968a156be4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hw-igw",
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hw-prt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a404c178fdbe4a36",
            "route_table_id": "rtb-0ec79f3f1047f4e61",
            "subnet_id": "subnet-0164fdd10e1fc74e8"
          },
          "dependencies": [
            "aws_internet_gateway.hw-igw",
            "aws_route_table.hw-prt",
            "aws_subnet.hw-snet",
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hw-pub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:690303306528:security-group/sg-0c9c565832185fbf6",
            "description": "HW Public SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9c565832185fbf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.10.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hw-pub-sg",
            "name_prefix": "",
            "owner_id": "690303306528",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-053afe5968a156be4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hw-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:690303306528:subnet/subnet-0164fdd10e1fc74e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0164fdd10e1fc74e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690303306528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HW-SUB-NET"
            },
            "tags_all": {
              "Name": "HW-SUB-NET"
            },
            "vpc_id": "vpc-053afe5968a156be4"
          },
          "dependencies": [
            "aws_vpc.hw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hw-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:690303306528:vpc/vpc-053afe5968a156be4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0d119f8f19d204b63",
            "default_route_table_id": "rtb-06936d06f8a7c2c5f",
            "default_security_group_id": "sg-03766618615f0a8f2",
            "dhcp_options_id": "dopt-0725e44f883ae8f2e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053afe5968a156be4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06936d06f8a7c2c5f",
            "owner_id": "690303306528",
            "tags": {
              "Name": "HW-VPC"
            },
            "tags_all": {
              "Name": "HW-VPC"
            }
          }
        }
      ]
    }
  ]
}